# CC421_Proyecto_PC5

./: .gitignore  README.md  evaluate.py  pitch_presentacion.md  play_model.py  prompt_presentacion.md  pyproject.toml  requirements.txt  sweep.py  train_cem.py  train_td.py  update_notebook.py
docs/: informe.tex  referencias.bib
docs/secciones/: algoritmo.tex  arquitectura.tex  caracteristicas.tex  cem.tex  conclusiones.tex  discusion.tex  diseno_experimental.tex  estado_arte.tex  introduccion.tex  modelo_mdp.tex  resultados.tex  resumen.tex  td_learning.tex  valor_politica.tex
models/: cem_weights.npy  td_weights.npy  td_weights_old.npy
notebooks/: colab.ipynb  eda.ipynb
src/tetris_rl/: __init__.py  features.py
src/tetris_rl/agents/: __init__.py  baselines.py  cem.py  linear_agent.py  td_agent.py
src/tetris_rl/data/: __init__.py  generate.py  logger.py
src/tetris_rl/env/: __init__.py  board.py  engine.py  pieces.py  tetris_env.py
tests/: test_baselines.py  test_cem.py  test_features.py  test_generate.py  test_linear_agent.py  test_logger.py
