[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris-rl"
version = "0.1.0"
description = "Optimización de políticas de juego en Tetris mediante RL (CEM) y extracción de características"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
